[bugfix] Fix broken interface autodetection and matching logic

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - LOCAL__BUFFERS_SIZE__LIMIT=33554432
       - LOCAL__BUFFERS_NUM__BUFFERS=1
       - AUTODETECTION_ENABLED=1
+      - AUTODETECTION_EXCLUDE=/br-.*/,docker0
       - API_ADDR=127.0.0.1:3005
       - API_METRICS=1
       - API_PROFILING=0
