--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,7 @@
 FROM mcr.microsoft.com/devcontainers/go:1.25-bookworm
 
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+RUN rm -f /etc/apt/sources.list.d/yarn.list && apt-get update \
+    && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install git \
     build-essential \
     curl
