--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,10 +40,6 @@
         "go.testEnvVars": {
           "CGO_ENABLED": "1"
         },
-        "go.testFlags": [
-          "-v",
-          "-race"
-        ],
         "go.testTimeout": "10s",
         "go.testOnSave": true,
         "go.coverOnSingleTest": true,
@@ -51,6 +47,7 @@
         "go.coverOnTestPackage": true,
         "go.lintTool": "golangci-lint",
         "go.lintOnSave": "package",
+        "go.testOnSave": true,
         "[go]": {
           "editor.codeActionsOnSave": {
             "source.organizeImports": "always"
